--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,36 +9,38 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+
+  
       <h1 class="govuk-heading-xl">
-        Prototype your service using GOV.UK Prototype Kit
-        <span class="govuk-caption-xl">{{releaseVersion}}</span>
-      </h1>{{releaseVersion | log }}
-      <p>
-        This kit lets you rapidly create HTML prototypes of GOV.UK services.
-      </p>
+          A to Z
+        </h1>
+        
+		        <p>
+          	    An A to Z of terms we use for data and measurement in DWP Digital Health and&nbsp;Disability.
+        	    </p>
 
-      <p>
-        It contains all you need to prototype anything from simple static pages to complex, data-driven transactions.
-      </p>
 
-      <h2 class="govuk-heading-m">About this page</h2>
+          <h2 class="govuk-heading-l">A</h2>
 
-      <p>We recommend you add links to your prototype to this page, rather than delete it.
-        You'll find this page in the kit at '/app/views/index.html'.</p>
+<!-- add A to Z content type here, with variable "initial: 'a'" -->
 
-      <p>You can change the service name by editing the file '/app/config.js'.</p>
 
-      <h2 class="govuk-heading-m">Examples and documentation</h2>
+          <h2 class="govuk-heading-l">D</h2>
 
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          <a href="/docs/tutorials-and-examples">Tutorials and templates</a>
-        </li>
-        <li>
-          <a href="https://design-system.service.gov.uk">GOV.UK Design System</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+<!-- add A to Z content type here, with variable "initial: 'd'" -->
+
+
+          <h2 class="govuk-heading-l">M</h2>
+
+<!-- add A to Z content type here, with variable "initial: 'm'" -->
+
+
+          <h2 class="govuk-heading-l">R</h2>
+
+<!-- add A to Z content type here, with variable "initial: 'r'" -->
+
+
+
+
 
 {% endblock %}
