--- a/app/views/terms.html
+++ b/app/views/terms.html
@@ -1,37 +1,25 @@
+{% extends "layout.html" %} {% block pageTitle %} Home – GOV.UK Prototype Kit {%
+endblock %} {% block content %}
 
-{% extends "layout.html" %}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-l">{{ item.termName }}</h1>
 
-{% block pageTitle %}
-  Home – GOV.UK Prototype Kit
-{% endblock %}
+    <h2 class="govuk-heading-m">Definition</h2>
 
-{% block content %}
+    <p>{{ item.definition.definitionText1 }}</p>
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    {% if item.definition.definitionText2 %}
+    <p>{{ item.definition.definitionText2 }}</p>
+    {% endif %} {% if item.definition.definitionText3 %}
+    <p>{{ item.definition.definitionText3 }}</p>
+    {% endif %} {% if item.definition.definitionText4 %}
+    <p>{{ item.definition.definitionText4 }}</p>
+    {% endif %}
 
-  
-      <h1 class="govuk-heading-l">
-          
-<!-- "termName: " -->
+    <h2 class="govuk-heading-m">Purpose</h2>
 
-        </h1>
-
-
-          <h2 class="govuk-heading-m">Definition</h2>
-
-<!-- Add text from "definition" object. There'll be up to 4 lines, but usually only 1:
-
-    definitionText1
-    definitionText2
-    definitionText3
-    definitionText4
-
--->
-
-            <h2 class="govuk-heading-m">Purpose</h2>
-
-<!-- Add text from "purpose" object. There'll be up to 4 lines, but usually only 1:
+    <!-- Add text from "purpose" object. There'll be up to 4 lines, but usually only 1:
 
     purposeText1
     purposeText2
@@ -40,19 +28,17 @@
 
 -->
 
+    <h2 class="govuk-heading-l">Synonyms</h2>
 
-          <h2 class="govuk-heading-l">Synonyms</h2>
-
-<!-- add text from "synonyms" object. 
+    <!-- add text from "synonyms" object. 
     
     Some of the JSON files don't contain it, as there are no synonyms. If so, please can "No synonyms defined." be output?
 
 -->
 
+    <h2 class="govuk-heading-l">Parent term</h2>
 
-          <h2 class="govuk-heading-l">Parent term</h2>
-
-<!-- add "parent" objects:  
+    <!-- add "parent" objects:  
 
     "parentTermName" as text, with "parentTermURL" as embedded hyperlink. Note that the "parentTermURL" value is just the filename with no leading slash.
 
@@ -60,32 +46,37 @@
 
 -->
 
+    <h2 class="govuk-heading-l">Child terms</h2>
 
-            <h2 class="govuk-heading-l">Child terms</h2>
-
-<!-- add "child" objects. There may be more than one, but in most cases there are zero. If there are zero children, please can "None defined" be output?
+    <!-- add "child" objects. There may be more than one, but in most cases there are zero. If there are zero children, please can "None defined" be output?
 
     Multiple items have an incremental suffix, "childTermName1", "childTermName2", etc. 
     
     Each child object has label and URL in an array. Please embed "URL" as hyperlink behind the label. Note that the "URL" value is just the filename with no leading slash.
 
---> 
+-->
 
+    <h2 class="govuk-heading-l">Source</h2>
 
-            <h2 class="govuk-heading-l">Source</h2>
-
-<!-- add "source" objects. There may be more than one, but in most cases there are zero. If there are zero children, please can "None defined" be output?
+    <!-- add "source" objects. There may be more than one, but in most cases there are zero. If there are zero children, please can "None defined" be output?
 
     Multiple items have an incremental suffix, "sourceName1", "sourceName2", etc. 
     
     Each source object has label and URL in an array. Please embed "URL" as hyperlink behind the label. In this case, it's a full external URL.
 
---> 
+-->
 
+    <h2 id="feedback" class="govuk-heading-l">Feedback</h2>
+    <p class="govuk-body">
+      Is this term incorrect, or is there something missing? Tell us using the
+      <a
+        href="https://forms.office.com/Pages/ResponsePage.aspx?id=DpxP-knna0i8NIr6EGM3VnGGqao7aCRJpUj9ujjADTdUM1JPNkEwRUdJUVpLQjhCMVZVQklDRDVHRC4u"
+        target="_blank"
+        class="govuk-link"
+        >feedback form (opens in new tab)</a
+      >.
+    </p>
 
-<h2 id="feedback" class="govuk-heading-l">Feedback</h2>
-<p class="govuk-body">Is this term incorrect, or is there something missing? Tell us using the <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DpxP-knna0i8NIr6EGM3VnGGqao7aCRJpUj9ujjADTdUM1JPNkEwRUdJUVpLQjhCMVZVQklDRDVHRC4u" target="_blank" class="govuk-link">feedback form (opens in new tab)</a>.</p>
-
-
-
-{% endblock %}
+    {% endblock %}
+  </div>
+</div>
