--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
 
           {% for item in items %}
           <h3 id="linked-data" tabindex="-1" class="govuk-heading-m">
-            <a href="{{ item.termName | lower | replace(' ', '_') }}" class="govuk-link">{{ item.termName }}</a>
+            <a href="{{ item.termName | lower | replace(' ', '-') }}" class="govuk-link">{{ item.termName }}</a>
           </h3>
 
           <p> {{ item.description }} </p>
