--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -7,6 +7,7 @@ $govuk-assets-path: '/govuk/assets/';
 
 // Import GOV.UK Frontend and any extension styles if extensions have been configured
 @import ".tmp/sass/extensions";
+.govuk-header__logo {display: none;}
 
 // Patterns that aren't in Frontend
 @import "patterns/contents-list";
